# cc2-openwebui

./: .gitignore  Cargo.toml  Dockerfile  build.rs  config.example.toml  docker-compose.windows.yml  docker-compose.yml  readme.md
docs/: obicolm.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.svelte  api.ts  stores.ts  ws.ts
frontend/src/lib/: AMSPanel.svelte  AuxControls.svelte  Camera.svelte  ConfirmModal.svelte  Controls.svelte  DetectionPanel.svelte  FileList.svelte  Modal.svelte  Onboarding.svelte  PrintHeader.svelte  PrintModal.svelte  SettingsModal.svelte  TempPanel.svelte  Toast.svelte  Topbar.svelte  errors.ts
frontend/src/lib/onboarding/: PhaseOnePrinter.svelte  PhaseThreeNotifications.svelte  PhaseTwoDetection.svelte
frontend/src/lib/settings/: SectionDanger.svelte  SectionDetection.svelte  SectionGeneral.svelte  SectionLogs.svelte  SectionNotifications.svelte
src/: camera.rs  config.rs  docker.rs  error.rs  main.rs  update.rs
src/api/: camera.rs  detection.rs  logs.rs  mod.rs  notifications.rs  obico.rs  printer.rs  router.rs  settings.rs  setup.rs  snapshots.rs  upload.rs  version.rs  ws.rs
src/detection/: engine.rs  mod.rs  obico.rs
src/notifications/: discord.rs  manager.rs  mod.rs  ntfy.rs  payload.rs
src/printer/: client_raw.rs  client_ws.rs  commands.rs  discovery.rs  manager.rs  mod.rs  models.rs  state.rs
